[metadata]
name = noaa_ncep
author = Aaron Valoroso
author_email = Aaron.A.Valoroso@erdc.dren.mil
summary = Interface to the NOAA NCEP data repository.
description-file = README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test=pytest

[extras]
tests =
    pytest

[files]
packages =
    quest_provider_plugins

